Changed margin for catalog edit page cancel button to fix misalignment

--- a/ca_proto/ca_proto/wwwroot/app/areas/admin/inventory/inventory.less
+++ b/ca_proto/ca_proto/wwwroot/app/areas/admin/inventory/inventory.less
@@ -15,7 +15,6 @@
 	height:0px; 
 	border-left:5px solid transparent;
 	border-right:5px solid transparent;
-	
 	border-bottom:5px solid #000000;
 }
 .sort-arrow-down {
@@ -49,8 +48,8 @@ form#addProductForm, form#filterProductForm{
 				padding-top: 15px;
 				input{
 					float: right;
-					&:last-of-type{
-						margin-top: 0;
+					&.btn-cancel{
+						margin-top: 25px;
 					}
 				}
 			}
@@ -110,8 +109,8 @@ form#addProductForm, form#filterProductForm{
 						padding: 0;
 						float: none;
 						max-width: none;
-						&:last-of-type{
-							margin-left: 0;
+						&.btn-cancel{
+							margin: 0;
 						}
 					}
 				}
